--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -42,7 +42,7 @@
   transition: border 0.4s ease;
 
   &--icon {
-    background: url('./expand_more.svg') no-repeat;
+    background: url("../components/input/expand_more.svg") no-repeat;
     background-position: 95% center;
   }
 
