--- a/src/page/about.pug
+++ b/src/page/about.pug
@@ -1,4 +1,4 @@
-doctype html
+<!DOCTYPE html>
 html(lang="en")
   head
     meta(charset="UTF-8")
@@ -6,4 +6,4 @@ html(lang="en")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     title Document
   body
-    h1 Hello from about page!
+    h1 Страница эбаут
