--- a/src/page/index.pug
+++ b/src/page/index.pug
@@ -1,15 +1,15 @@
-extends layout/main.pug
+extends ../layout/main.pug
 
 block variables
   - var title = "Toxin - подбери свой отель!"
   - var description = "Toxin description"
   - var pageClass = "index-page"
-
+  
 block content
   main
     .index-block
       .container
         .index-block__wrap
-          include components/date-wishes/date-wishes
+          include ../components/date-wishes/date-wishes
         .index-block__slogan
           p Лучшие номера для вашей работы, отдыха и просто вдохновения
