fix позиционирования drop-downа на главной

--- a/src/components/date-wishes/date-wishes.scss
+++ b/src/components/date-wishes/date-wishes.scss
@@ -53,9 +53,7 @@
 }
 
 .drop-down-container {
-  position: absolute;
-  top: 535px;
-  left: 50%;
+  position: relative;
 }
 
 .date-wishes__title {
