убрал жирный для кнопок

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -3,7 +3,7 @@
   z-index: 100;
   padding: 10px 20px;
   color: $mainColor;
-  font-weight: bold;
+  font-weight: normal;
   font-size: 12px;
   font-family: $fontFamily;
   line-height: 15px;
