--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,6 +1,7 @@
 .page-header {
   position: relative;
   z-index: 100;
+  background-color: #fff;
   box-shadow: 0 10px 20px rgba(31, 32, 65, 0.05);
 }
 
