--- a/src/layout/ui-kit.pug
+++ b/src/layout/ui-kit.pug
@@ -7,5 +7,6 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     title Элементы формы
-  body
-    +logo({ isTextUnshow: true, isColorless: true })
+  body.ui-kit
+    +logo({ isBig: true })
+    .container
