--- a/src/components/logo/logo.scss
+++ b/src/components/logo/logo.scss
@@ -3,20 +3,9 @@
   min-width: 120px;
   min-height: 38px;
 
-  &--colorless {
-    .logo__link:hover {
-      .logo__letter {
-        fill: #cccccc;
-      }
-
-      .logo__label-left {
-        fill: #cccccc;
-      }
-    }
-
-    path {
-      fill: #cccccc;
-    }
+  &--big {
+    margin-top: 30px;
+    margin-left: 30px;
   }
 }
 
