--- a/src/components/input/input.pug
+++ b/src/components/input/input.pug
@@ -1,8 +1,8 @@
 mixin input(options = {})
   -
     var inputGroupClass = options.labelName ? 'input-group  input-group--column' : 'input-group'
-    //- var inputClass = options.isButtonSplit ? 'input-group__input  input-group__input--button-split' : 'input-group__input'
     var inputClass = "input-group__input"
+    var labelClass = options.isBigLabel ? 'input-group__label  input-group__label--big' : 'input-group__label'
 
     if (options.isButtonSplit) {
       inputClass += "  input-group__input--button-split"
@@ -27,12 +27,12 @@ mixin input(options = {})
    - if (options.isHaveIcon) inputFakeClass += '  input-group__input--icon'
    - if (options.isDownSplitAnimation) inputFakeClass += '  input-group__button-split--down-animation'
    if options.labelName
-    p(class='input-group__label' id=`for-${options.id}`)= options.labelName
+    p(class=labelClass id=`for-${options.id}`)= options.labelName
     div(id=`${options.id}` class=`${inputFakeClass}` type=options.type name=options.name)= options.placeholder
   else if options.isButtonSplit
     div(class=inputGroupClass)
       if options.labelName
-        label(class='input-group__label' for=`${options.id}`)= options.labelName
+        label(class=labelClass for=`${options.id}`)= options.labelName
       p.input-group__split
         input(id=`${options.id}` class=inputClass type=options.type name=options.name placeholder=options.placeholder)
         button(id=`${options.splitId}` class=`${splitButtonClass}` type='button')
@@ -40,5 +40,5 @@ mixin input(options = {})
   else
     p(class=inputGroupClass)
       if options.labelName
-        label(class='input-group__label' for=`${options.id}`)= options.labelName
+        label(class=labelClass for=`${options.id}`)= options.labelName
       input(id=`${options.id}` class=inputClass type=options.type name=options.name placeholder=options.placeholder)
