--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -71,6 +71,7 @@ body {
   }
 }
 
+@import "ui-kit.scss";
 @import "../components/header/header";
 @import "../components/logo/logo";
 @import "../components/main-menu/main-menu";
