--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -40,7 +40,7 @@
 .input-group__input {
   box-sizing: border-box;
   width: 100%;
-  padding: 9px 15px;
+  padding: 9px 14px;
   color: transparentize($contentColor, 0.25);
   font-size: 14px;
   font-family: $fontFamily;
@@ -72,6 +72,7 @@
 
   &::placeholder {
     color: transparentize($contentColor, 0.76);
+    font-family: Montserrat;
     font-size: 14px;
   }
 
