--- a/src/page/form-elements.pug
+++ b/src/page/form-elements.pug
@@ -6,4 +6,4 @@ block content
     .ui-kit
       .ui-kit__wrap
         .ui-kit__inputs
-          +input({ id:'textField', type: 'text', placeholder: 'Email', labelName: 'Text field', isBigLabel: true })
+          +input({ id:'textField', type: 'text', placeholder: 'Email', labelName: 'Text field', isBigLabel: true, descrText: 'Default' })
