добавил инпут ховер в form-elements

--- a/src/page/form-elements.pug
+++ b/src/page/form-elements.pug
@@ -7,3 +7,4 @@ block content
       .ui-kit__wrap
         .ui-kit__inputs
           +input({ id:'textField', type: 'text', placeholder: 'Email', labelName: 'Text field', isBigLabel: true, descrText: 'Default' })
+          +input({ id:'textFieldHover', type: 'text', placeholder: 'This is pretty awesome', labelName: 'Text field', isBigLabel: true, descrText: 'Hover / Focus', isHover: true })
