--- a/src/components/input/input.pug
+++ b/src/components/input/input.pug
@@ -35,8 +35,9 @@ mixin input(options = {})
    - if (options.isHaveIcon) inputFakeClass += '  input-group__input--icon'
    - if (options.isDownSplitAnimation) inputFakeClass += '  input-group__button-split--down-animation'
    if options.labelName
-    p(class=labelClass id=`for-${options.id}`)= options.labelName
-    div(id=`${options.id}` class=`${inputFakeClass}` type=options.type name=options.name)= options.placeholder
+    div(class=inputGroupClass)
+      p(class=labelClass id=`for-${options.id}`)= options.labelName
+      div(id=`${options.id}` class=`${inputFakeClass}` type=options.type name=options.name)= options.placeholder
   else if options.isButtonSplit
     div(class=inputGroupClass)
       if options.labelName
