добавил оставшиеся инпуты в inputs

--- a/src/page/form-elements.pug
+++ b/src/page/form-elements.pug
@@ -8,3 +8,5 @@ block content
         .ui-kit__inputs
           +input({ id:'textField', type: 'text', placeholder: 'Email', labelName: 'Text field', isBigLabel: true, descrText: 'Default' })
           +input({ id:'textFieldHover', type: 'text', placeholder: 'This is pretty awesome', labelName: 'Text field', isBigLabel: true, descrText: 'Hover / Focus', isHover: true })
+          +input({ id: 'number-guests-input', isFakeInput: true, labelName: 'Dropdown', isButtonSplit: true, isDownSplitAnimation: true, isHaveIcon: true, placeholder: 'Сколько гостей', isBigLabel: true, descrText: 'Default' })
+          +input({ id:'maskedTextField', type: 'text', placeholder: 'ДД.ММ.ГГГГ', labelName: 'Masked text field', isBigLabel: true, descrText: 'Default' })
