--- a/src/page/form-elements.pug
+++ b/src/page/form-elements.pug
@@ -10,3 +10,6 @@ block content
           +input({ id:'textFieldHover', type: 'text', placeholder: 'This is pretty awesome', labelName: 'Text field', isBigLabel: true, descrText: 'Hover / Focus', isHover: true })
           +input({ id: 'number-guests-input', isFakeInput: true, labelName: 'Dropdown', isButtonSplit: true, isDownSplitAnimation: true, isHaveIcon: true, placeholder: 'Сколько гостей', isBigLabel: true, descrText: 'Default' })
           +input({ id:'maskedTextField', type: 'text', placeholder: 'ДД.ММ.ГГГГ', labelName: 'Masked text field', isBigLabel: true, descrText: 'Default' })
+          .ui-kit__inputs-column
+            +input({ id: 'arrival-input', splitId: 'arrival-split-btn', labelName: 'Date Dropdown', isButtonSplit: true, isDownSplitAnimation: true, iconSrc: 'expand_more.svg', placeholder: 'ДД.ММ.ГГГГ', isDarkPlaceholder: true, isBigLabel: true })
+            +input({ id: 'departure-input', splitId: 'departure-split-btn', labelName: 'Date Dropdown', isButtonSplit: true, isDownSplitAnimation: true, iconSrc: 'expand_more.svg', placeholder: '19.08.2019', isDarkPlaceholder: true, isBigLabel: true })
