вынес размер для column--small

--- a/src/style/ui-kit.scss
+++ b/src/style/ui-kit.scss
@@ -33,3 +33,11 @@
     width: 66px;
   }
 }
+
+.ui-kit__inputs-column--small {
+  width: 266px;
+
+  .input-group__button-split {
+    width: 55px;
+  }
+}
