--- a/src/page/form-elements.pug
+++ b/src/page/form-elements.pug
@@ -13,5 +13,7 @@ block content
           .ui-kit__inputs-column
             +input({ id: 'arrival-input', splitId: 'arrival-split-btn', labelName: 'Date Dropdown', isButtonSplit: true, isDownSplitAnimation: true, iconSrc: 'expand_more.svg', placeholder: 'ДД.ММ.ГГГГ', isDarkPlaceholder: true, isBigLabel: true })
             +input({ id: 'departure-input', splitId: 'departure-split-btn', labelName: 'Date Dropdown', isButtonSplit: true, isDownSplitAnimation: true, iconSrc: 'expand_more.svg', placeholder: '19.08.2019', isDarkPlaceholder: true, isBigLabel: true })
-          .ui-kit__inputs-column
+          div(class="ui-kit__inputs-column  ui-kit__inputs-column--small")
             +input({ id: 'filterDateDropdown', isFakeInput: true, labelName: 'Filter date dropdown', isButtonSplit: true, isDownSplitAnimation: true, isHaveIcon: true, placeholder: '19 авг - 23 авг', isBigLabel: true })
+          div(class="ui-kit__inputs-column  ui-kit__inputs-column--small")
+            +input({ isButtonSplit: true, labelName: 'Subscription text field',  isBigLabel: true, iconSrc: 'arrow_forward.svg', type: 'email', placeholder: 'Email', isRightSplitAnimation: true })
