--- a/src/page/form-elements.pug
+++ b/src/page/form-elements.pug
@@ -19,4 +19,4 @@ block content
           div(class="ui-kit__inputs-column  ui-kit__inputs-column--small")
             +input({ isButtonSplit: true, labelName: 'Subscription text field',  isBigLabel: true, iconSrc: 'arrow_forward.svg', type: 'email', placeholder: 'Email', isRightSplitAnimation: true })
         .ui-kit__column
-          +checkbox()
+          +checkbox({title: 'Checkbox Buttons'})
