--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -1,9 +1,69 @@
 .checkbox__title {
   margin: 0;
+  margin-bottom: 18px;
   font-size: 12px;
   line-height: 15px;
   font-family: "Montserrat", "Arial", sans-serif;
   font-style: normal;
   font-weight: bold;
   text-transform: uppercase;
+}
+
+.checkbox__item {
+  width: 240px;
+  margin: 0;
+  margin-bottom: 12px;
+}
+
+.checkbox__item input[type="checkbox"] {
+  display: none;
+}
+
+.checkbox__item label {
+  position: relative;
+  display: block;
+  padding-left: 30px;
+  color: transparentize($contentColor, 0.55);
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 18px;
+
+  &::before {
+    box-sizing: border-box;
+    position: absolute;
+    top: -2px;
+    left: 0;
+    width: 20px;
+    height: 20px;
+    content: "";
+    background-color: transparent;
+    border: 1px solid rgba(31, 32, 65, 0.25);
+    border-radius: 4px;
+    transition: border 0.3s ease 0s;
+  }
+
+  &::after {
+    content: "";
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    top: 3px;
+    left: 7px;
+    width: 4px;
+    height: 6px;
+    border-bottom: 2px solid $accentColor;
+    border-right: 2px solid $accentColor;
+    background-color: transparent;
+    transform: rotate(45deg);
+    transition: opacity 0.3s ease 0s, visibility 0.3s ease 0s;
+  }
+}
+
+.checkbox__item input[type="checkbox"]:checked + label::after {
+  visibility: visible;
+  opacity: 1;
+}
+
+.checkbox__item input[type="checkbox"]:checked + label::before {
+  border-color: $accentColor;
 }
