--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -13,6 +13,10 @@
   width: 240px;
   margin: 0;
   margin-bottom: 12px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .checkbox__item input[type="checkbox"] {
@@ -27,6 +31,7 @@
   font-size: 14px;
   font-weight: normal;
   line-height: 18px;
+  cursor: pointer;
 
   &::before {
     box-sizing: border-box;
