--- a/src/style/ui-kit.scss
+++ b/src/style/ui-kit.scss
@@ -55,3 +55,4 @@
 @import "../components/checkbox/checkbox";
 @import "../components/radiobtn/radiobtn";
 @import "../components/toggle/toggle";
+@import "../components/likebtn/likebtn";
