--- a/src/style/ui-kit.scss
+++ b/src/style/ui-kit.scss
@@ -56,3 +56,4 @@
 @import "../components/radiobtn/radiobtn";
 @import "../components/toggle/toggle";
 @import "../components/likebtn/likebtn";
+@import "../components/ratebtn/ratebtn";
