--- a/src/components/ratebtn/ratebtn.pug
+++ b/src/components/ratebtn/ratebtn.pug
@@ -6,7 +6,7 @@ mixin ratebtn(options = {})
       each item in options.items
         .ratebtn__item
           - for (var i = 1; i < 6; ++i) {
-            - var isChecked = i === item.currentRating;        
-            input(type="radio" id=`star-${i}` name=item.idGroup value=`${i}` checked=isChecked)
-            label(for=`star-${i}`)
+            - var isChecked = i === 6 - item.currentRating;        
+            input(type="radio" id=`star-${item.idGroup}-${i}` name=item.idGroup value=`${i}` checked=isChecked)
+            label(for=`star-${item.idGroup}-${i}`)
           - }
