подключил стили range-sliderа

--- a/src/style/ui-kit.scss
+++ b/src/style/ui-kit.scss
@@ -57,3 +57,4 @@
 @import "../components/toggle/toggle";
 @import "../components/likebtn/likebtn";
 @import "../components/ratebtn/ratebtn";
+@import "../components/range-slider/range-slider";
