реализовал отображение min/max у range-sliderа

--- a/src/page/form-elements.pug
+++ b/src/page/form-elements.pug
@@ -67,4 +67,4 @@ block content
             })
         .ui-kit__column
           .ui-kit__column-row
-            +rangeSlider({ title: "Range Slider" })
+            +rangeSlider({ title: "Range Slider", min: '5 000', max: '10 000' })
