--- a/src/components/range-slider/range-slider.pug
+++ b/src/components/range-slider/range-slider.pug
@@ -1,7 +1,11 @@
 mixin rangeSlider(options = {})
   .range
-    if options.title
-     p.range__title= options.title
+    .range__head
+      p.range__title= options.title
+      .range__head-range
+        p(class="range_value  range_value--min")= options.min + '₽'
+        span -
+        p(class="range_value  range_value--max")= options.max + '₽'
     .range__wrap
       .range__bar
         div(class="range__scale" style="width: 27%;")
