--- a/src/components/range-slider/range-slider.scss
+++ b/src/components/range-slider/range-slider.scss
@@ -5,6 +5,41 @@ $accentSecondGradColor: #66d2ea;
   position: relative;
 }
 
+.range__head {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  font-size: 0;
+
+  span {
+    color: transparentize($contentColor, 0.55);
+    font-size: 13px;
+  }
+}
+
+.range_value {
+  box-sizing: border-box;
+  position: relative;
+  display: inline-block;
+  margin: 0;
+  margin-right: 2px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  color: transparentize($contentColor, 0.55);
+  font-size: 12px;
+  line-height: 15px;
+  text-transform: uppercase;
+  vertical-align: top;
+  border: none;
+  background: transparent;
+
+  &:last-child {
+    margin-right: 0;
+    margin-left: 2px;
+  }
+}
+
 .range__title {
   margin: 0;
   margin-bottom: 18px;
