подключил стили title

--- a/src/style/ui-kit.scss
+++ b/src/style/ui-kit.scss
@@ -63,3 +63,4 @@
 @import "../components/likebtn/likebtn";
 @import "../components/ratebtn/ratebtn";
 @import "../components/range-slider/range-slider";
+@import "../components/title/title";
