--- a/src/page/form-elements.pug
+++ b/src/page/form-elements.pug
@@ -80,4 +80,5 @@ block content
           div(class="ui-kit__column-row  ui-kit__column-row--small")
             a(href="#" class="ui-kit__link  ui-kit__link--hover") click me
             a(href="#" class="ui-kit__link") click me
-
+          div(class="ui-kit__column-row  ui-kit__column-row--lwidth")
+            +button({ title: 'Перейти к оплате', isHaveIcon: true, buttonType: 'submit' })
