подключил стили и компонент пагинации

--- a/src/page/form-elements.pug
+++ b/src/page/form-elements.pug
@@ -8,6 +8,7 @@ include ../components/ratebtn/ratebtn
 include ../components/range-slider/range-slider
 include ../components/button/button
 include ../components/title/title
+include ../components/pagination/pagination
 
 block content
   .container
