--- a/src/style/ui-kit.scss
+++ b/src/style/ui-kit.scss
@@ -116,3 +116,4 @@
 @import "../components/ratebtn/ratebtn";
 @import "../components/range-slider/range-slider";
 @import "../components/title/title";
+@import "../components/pagination/pagination";
