--- a/src/page/form-elements.pug
+++ b/src/page/form-elements.pug
@@ -83,3 +83,5 @@ block content
             a(href="#" class="ui-kit__link") click me
           div(class="ui-kit__column-row  ui-kit__column-row--lwidth")
             +button({ title: 'Перейти к оплате', isHaveIcon: true, buttonType: 'submit' })
+          .ui-kit__column-row
+            +pagination({ title: 'Pagination' })
